// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupSocialIntro renders correctly when social backup is complete 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 20,
        "paddingHorizontal": 20,
      }
    }
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Book",
              "fontSize": 26,
              "lineHeight": 32,
            }
          }
        >
          socialBackup.yourSafeguards
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 20,
            }
          }
        >
          socialBackupIntro.body
        </Text>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "marginBottom": 8,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#F1F0EB",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 8,
                "padding": 16,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "marginBottom": 8,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#F1F0EB",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 8,
                "padding": 16,
              }
            }
          />
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`BackupSocialIntro renders correctly when social backup is not complete 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "flex": 1,
      "justifyContent": "space-between",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
        "paddingBottom": 20,
        "paddingHorizontal": 20,
      }
    }
  >
    <View>
      <View>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Jost-Book",
              "fontSize": 26,
              "lineHeight": 32,
            }
          }
        >
          setUpSocialBackup
        </Text>
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
              "marginBottom": 20,
            }
          }
        >
          socialBackup.body
        </Text>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "marginBottom": 8,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#F1F0EB",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 8,
                "padding": 16,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "marginTop": 20,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingHorizontal": 2,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 16,
                  "lineHeight": 22,
                  "marginBottom": 8,
                }
              }
            >
              socialBackupPhraseHeader
            </Text>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackgroundBorderless",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                global:copy
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "alignContent": "center",
                "backgroundColor": "#F1F0EB",
                "borderRadius": 4,
                "justifyContent": "center",
                "marginTop": 8,
                "padding": 16,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "paddingVertical": 20,
          }
        }
      >
        <AndroidSwitch
          accessibilityRole="switch"
          enabled={true}
          on={false}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          thumbTintColor="#EDEEEF"
          trackColorForFalse="#B4B9BD"
          trackColorForTrue="#1AB775"
          trackTintColor="#B4B9BD"
        />
        <Text
          style={
            Object {
              "color": "#2E3338",
              "fontFamily": "Inter-Medium",
              "fontSize": 16,
              "lineHeight": 22,
              "paddingLeft": 8,
              "paddingRight": 5,
              "paddingTop": 5,
            }
          }
        >
          socialBackup.confirmation
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Object {
            "borderRadius": 100,
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={false}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#97DFC1",
            "height": 48,
            "justifyContent": "center",
            "minWidth": 120,
            "opacity": undefined,
            "paddingHorizontal": 24,
            "paddingVertical": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 16,
              "lineHeight": 22,
            }
          }
        >
          global:done
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
